main.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100vh;
    font-family: 'Montserrat', sans-serif;
    color: #333333;
    background-color: #fafafa;
    position: relative;
    overflow: hidden;
}

.header-container {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 50px 0;
}

.main-title {
    font-family: 'Kaushan Script';
    color: #14d9c4;
}

.main-container {
    width: 100%;
    display: flex;
    flex-direction: column;
    flex: 1;
    align-items: center;
    padding-bottom: 30px;
    position: relative;
}

.hidden {
    display: none;
}

.form {
    display: flex;
    width: calc(100% - 40px);
    flex-direction: column;
    max-width: 800px;
    background: #8e9eab;
    background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab);
    background: linear-gradient(to right, #eef2f3, #8e9eab);
    padding: 30px;
    margin: 20px;
    border-radius: 10px;
}

.label {
    display: flex;
    width: 100%;
    flex-direction: column;
}

.custom-input {
    height: 30px;
    border: 0;
    background-color: transparent;
    border-bottom: 1px solid #14d9c4;
    color: #333333;
    font-family: 'Montserrat', sans-serif;
    font-size: 16px;
    margin-bottom: 20px;
}

input:focus {
    outline: 0;
}

.create-button {
    align-self: flex-end;
}

.heroines-list {
    width: 100%;
    margin: 0 40px;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin-top: 30px;
}

.footer-container {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: center;
    background-color: #333333;
}

.inner-footer-container {
    width: 100%;
    display: flex;
    font-size: 14px;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    background-color: #333333;
    color: #fafafa;
    max-width: 800px;
    padding: 10px 0;
}

.inner-footer-container p {
    margin: 5px;
}

.item {
    display: flex;
    flex-direction: column;
    width: 200px;
    height: 200px;
    border-radius: 10px;
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
    background-color: white;
    padding: 10px;
    margin: 10px;
}

.hero-superpower {
    flex-grow: 1;
}

.update-link {
    font-size: 14px;
    color: #14d9c4;
    cursor: pointer;
    align-self: flex-end;
}

.update-link:hover {
    color: #02AAB0;
}

.hero-name {
    font-family: 'Kaushan Script';
    color: #14d9c4;
    font-size: 20px;
    margin: 10px 0;
}

.button-container {
    display: flex;
    width: 100%;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.button {
    border: 0;
    background: #02AAB0;
    background: -webkit-linear-gradient(to right, #00CDAC, #02AAB0);
    background: linear-gradient(to right, #00CDAC, #02AAB0);
    font-family: 'Montserrat', sans-serif;
    width: 200px;
    height: 50px;
    border-radius: 5px;
    font-size: 16px;
    cursor: pointer;
    margin-bottom: 10px;
    color: white;
}

.button:hover {
    background: #00CDAC;
    background: -webkit-linear-gradient(to right, #02AAB0, #00CDAC);
    background: linear-gradient(to right, #02AAB0, #00CDAC);
    box-shadow: 0px 3px 5px rgb(0, 205, 172, 0.3);
}

#loader {
    display: none;
}

#loader.loader {
    display: flex;
}

.notification {
    display: flex;
    width: 400px;
    box-shadow: 0 0 15px 0 rgba(#000, 0.35);
    background: #8e9eab;
    background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab);
    background: linear-gradient(to right, #eef2f3, #8e9eab);
    border-radius: 10px;
    padding: 10px;
    position: absolute;
    bottom: 20px;
    right: 20px;
    transform: translateX(120%);
    transition: transform 0.5s ease;
}

.notification.show {
    transform: translateX(0%);
    transition: transform 0.5s ease;
}


@media only screen and (min-width: 768px) {
    .button-container {
        flex-direction: row;
    }

    .button {
        margin-bottom: 0;
    }

    .get-button {
        margin-right: 20px;
    }

    .form {
        margin-top: 30px 0 0 0;
        
    }

    .input-container {
        display: flex;
        width: 100%;
    }

    .label:first-child {
        margin-right: 15px;
    }

    .label:last-child {
        margin-left: 15px;
    }

    .inner-footer-container {
        flex-direction: row;
        justify-content: space-between;
        padding: 20px;
    }

    .inner-footer-container p {
        margin: 0;
    }
}

